# toolcall-gateway

./: .gitignore  Makefile  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_text2tool.py  demo_tool2text.py
src/toolcall_gateway/: __init__.py  _tool_choice.py  errors.py  models.py  text2tool.py  tool2text.py
tests/: test_public_api.py  test_text2tool.py  test_tool2text.py
