[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "toolcall-gateway"
version = "1.0.0"
description = "Convert OpenAI-style tools and tool history into tagged text prompts, and tagged text back into OpenAI-style tool-call semantics."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["llm", "tool-calling", "function-calling", "openai", "prompting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolcall_gateway"]

[tool.hatch.build.targets.sdist]
include = [
    "src/toolcall_gateway",
    "tests",
    "examples",
    ".github/workflows",
    "Makefile",
    "README.md",
    "README.en.md",
    "pyproject.toml",
]
